OO-3185: Add the summary to the top of the portfolio binder toc and list

--- a/src/main/java/org/olat/modules/portfolio/ui/_content/binder_pages.html
+++ b/src/main/java/org/olat/modules/portfolio/ui/_content/binder_pages.html
@@ -10,8 +10,14 @@
 		</div>
 		#end
 	</div>
-	
+
 	<div class="o_portfolio_entries #if($timelineSwitch) o_portfolio_withtimeline #end">
+		#if($r.available("summary"))
+			<div class="o_block_large_bottom">
+				$r.render("summary")
+			</div>
+		#end	
+	
 		$r.render("table")
 		
 		#if($r.available("create.new.section"))
