--- a/src/main/java/org/olat/modules/portfolio/ui/_content/table_of_contents.html
+++ b/src/main/java/org/olat/modules/portfolio/ui/_content/table_of_contents.html
@@ -7,6 +7,9 @@
 		$r.contextHelpWithWrapper("Portfolio task and assignment: Collecting and editing")			
 	#end
 	<h2>$r.translate("table.of.contents", $binderTitle) #if($owners && !$owners.isEmpty())<small>$r.translate("binder.by",$owners)</small>#end</h2>
+	#if($r.available("summary"))
+		$r.render("summary")
+	#end
 		
 	<div class="o_portfolio_toc #if($timelineSwitch) o_portfolio_withtimeline #end clearfix">
 		<ul class="list-unstyled">
