--- a/src/main/java/org/olat/modules/portfolio/ui/_content/portfolio_element_row.html
+++ b/src/main/java/org/olat/modules/portfolio/ui/_content/portfolio_element_row.html
@@ -14,7 +14,7 @@
 #if(${row.isSection()})
 <div class="o_portfolio_section #if(${row.isSectionEnded()}) o_section_ended #end">
 	<h3>$r.escapeHtml($row.sectionLongTitle) <small><i class="o_icon $row.sectionCssClassStatus" title="$r.translate("section.status"): $r.translate("$row.getSectionStatusI18nKey()")"> </i></small></h3>
-	<div class="o_section_lead #if(${row.isSectionWithAssignmentToInstantiate()}) o_assignment_2_instantiate #else o_block_large_bottom #end">
+	<div class="o_section_lead o_block_large_bottom clearfix">
 		<div class="o_portfolio_section_meta o_small">
 			<div class="o_portfolio_dates clearfix">
 				#if($r.notNull($row.sectionBeginDate))
@@ -38,7 +38,7 @@
 				#if($r.isNotNull($row.reopenSectionLink))
 					$r.render($row.reopenSectionLink)
 				#end
-			</div>	
+			</div>
 		</div>
 
 		#if($r.isNotEmpty($row.sectionDescription))
@@ -56,9 +56,12 @@
 		 	#end
 		 	</span>
 		</div>
-		#end		
-	</div>
+		#end	
 	
+		#if($r.isNotNull($row.startSelection))
+			<div class="pull-right">$r.render($row.startSelection)</div>
+		#end
+	</div>
 
 	#if($r.isNotNull($row.newAssignmentLink))
 	<div class="panel panel-placeholder o_noprint">
@@ -76,21 +79,7 @@
 </div>
 #end
 #if(${row.isPendingAssignment()})
-	#if($r.isNotNull($row.instantiateAssignmentLink))
-	<div class="o_assignment_2_instantiate #if(${row.isSectionEnded()}) o_section_ended #end #if(${row.isLastAssignmentToInstantiate()}) last #end">$r.render($row.instantiateAssignmentLink)
-	<div id="o_assignment_summary_${row.instantiateAssignmentLink.formDispatchId}" style="display:none;"></div>
-	<script type="text/javascript">/* <![CDATA[ */jQuery(function() {
-	  jQuery('#${row.instantiateAssignmentLink.formDispatchId}').tooltip({
-		   html: true,
-		   container: 'body',
-	    title: function(){ return jQuery('#o_assignment_summary_1${row.instantiateAssignmentLink.formDispatchId}').html(); }
-	  });
-	  jQuery('#${row.instantiateAssignmentLink.formDispatchId}').on('click', function(){
-		   jQuery('#${row.instantiateAssignmentLink.formDispatchId}').tooltip('hide');
-	  });
-	});/* ]]> */</script>
-	</div>
-	#else
+	#if($r.isNull($row.instantiateAssignmentLink))
 	<div class="panel #if($r.isNotNull($row.editAssignmentLink)) panel-default #else panel-placeholder #end o_portfolio_assignments">
 		<div class="panel-heading">
 			<h4 class="panel-title"><i class="o_icon o_icon_assignment o_icon-fw"> </i>$r.translate("assignment"): $r.escapeHtml($row.assignmentTitle)</h4>
