--- a/src/main/java/org/olat/ims/qti21/ui/editor/interactions/_content/match_score.html
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/interactions/_content/match_score.html
@@ -1,16 +1,19 @@
 <table class="table matchInteraction score">
 	<thead>
 		<tr>
-			<th></th>
+			#if($r.isTrue($sourceLeft)) <th></th> #end
 			#foreach($targetChoice in $targetChoices)
 				<th>${r.render($targetChoice.getSummaryEl())}
 			#end
+			#if($r.isFalse($sourceLeft)) <th></th> #end
 		</tr>
 	</thead>
 	<tbody>
 	#foreach($sourceChoice in $sourceChoices)
 		<tr>
-			<th>${r.render($sourceChoice.getSummaryEl())}</th>
+			#if($r.isTrue($sourceLeft)) 
+				<th>${r.render($sourceChoice.getSummaryEl())}</th>
+			#end
 			#set($sourceIndex = ${foreach.index})
 			#foreach($targetChoice in $targetChoices)
 				<td class="o_sel_match_${sourceIndex}_${foreach.index}">
@@ -23,6 +26,9 @@
 					<div>$r.render("${sourceChoice.getChoiceIdentifier().toString()}-${targetChoice.getChoiceIdentifier().toString()}_ERROR")</div>
 				#end
 				</td>
+			#end
+			#if($r.isFalse($sourceLeft)) 
+				<td>${r.render($sourceChoice.getSummaryEl())}</td>
 			#end
 		</tr>
 	#end
