OO-3306: use the regular light theme for QTI 1.2 and 2.1 results export

--- a/src/main/java/org/olat/ims/qti21/resultexport/_content/qti21results.html
+++ b/src/main/java/org/olat/ims/qti21/resultexport/_content/qti21results.html
@@ -5,7 +5,7 @@
 	<title>$rootTitle</title>	
 	<link rel='stylesheet' href='../../../css/offline/qti/theme.css' />
 	<script type="text/javascript" src='../../../js/jquery/jquery-2.1.3.min.js'></script>
-	<script type="text/javascript" src='../../../js/jquery/maphilight/jquery.maphilight.min.js'></script>
+	<script type="text/javascript" src='../../../js/jquery/maphilight/jquery.maphilight.js'></script>
 	<script type="text/javascript" src='../../../js/jquery/qti/jquery.associate.js'></script>
 	<script type="text/javascript" src='../../../js/jquery/qti/jquery.gapMatch.js'></script>
 	<script type="text/javascript" src='../../../js/jquery/qti/jquery.graphicAssociate.js'></script>
