--- a/src/main/java/org/olat/ims/qti/resultexport/_content/qtiListing.html
+++ b/src/main/java/org/olat/ims/qti/resultexport/_content/qtiListing.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="../../css/offline/qti/theme.css" />
 	<title>$title</title>
-	<script type="text/javascript" src="../../css/offline/qti/jquery-2.1.3.min.js" ></script>
+	<script src='../../js/jquery/jquery-2.1.3.min.js'></script>
 	<script >
     $.noConflict();
     jQuery(document).ready(function(){
