--- a/src/main/java/org/olat/course/nodes/gta/ui/_content/identity_courseelement.html
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_content/identity_courseelement.html
@@ -11,3 +11,11 @@
 	#end
 </div>
 $r.render("table")
+<div class="o_button_group">
+	#if($r.available("bulk.done"))
+		$r.render("bulk.done")
+	#end
+	#if($r.available("bulk.visible"))
+		$r.render("bulk.visible")
+	#end
+</div>
