OO-3170: License management: Data model, administration of license types, addition and edition of licenses for learning resources

--- a/src/main/java/org/olat/repository/ui/list/_content/details.html
+++ b/src/main/java/org/olat/repository/ui/list/_content/details.html
@@ -273,7 +273,7 @@
 				/* ]]> */
 			</script>
 
-			#if ($referenceLinks && $referenceLinks.size() > 0)
+			#if (($referenceLinks && $referenceLinks.size() > 0) || $licSwitch)
 			<div class="panel panel-default o_usagepanel">
 				<div class="panel-heading" data-toggle="collapse" data-target="#collapseUsage">
 			    	<h3 class="panel-title">
@@ -284,18 +284,25 @@
 				</div>
 				<div id="collapseUsage" class="panel-collapse collapse">
 					<table class="table table-condensed table-striped"><tbody>
-						<tr>
-							<th>$r.translate("details.referenceinfo")</th>
-							<td>$r.translate("details.referenceinfo.txt")
-								#foreach($referenceLink in $referenceLinks)
-									#if($velocityCount != 1), #end$r.render($referenceLink)
-								#end
-							</td>
-						</tr>
-						<tr><th>$r.translate("cif.lastusage")</th><td>$r.formatDateAndTime($v.getStatistics().getLastUsage())</td></tr>
-						<tr><th>$r.translate("cif.usedbycnt")</th><td>$numUsers</td></tr>
-						<tr><th>$r.translate("cif.launched")</th><td>#if ($v.getStatistics().getLaunchCounter()) $v.getStatistics().getLaunchCounter() #else 0 #end</td></tr>
-						<tr><th>$r.translate("cif.downloaded")</th><td>#if ($v.getStatistics().getDowloadCounter()) $v.getStatistics().getDowloadCounter() #else 0 #end</td></tr>
+						#if ($licSwitch)
+							<tr><th>$r.translate("cif.license")</th><td>$license</td></tr>
+							<tr><th>$r.translate("cif.licensor")</th><td>$licensor</td></tr>
+							<tr><th>$r.translate("cif.license.text")</th><td>$licenseText</td></tr>
+						#end
+						#if ($referenceLinks && $referenceLinks.size() > 0)
+							<tr>
+								<th>$r.translate("details.referenceinfo")</th>
+								<td>$r.translate("details.referenceinfo.txt")
+									#foreach($referenceLink in $referenceLinks)
+										#if($velocityCount != 1), #end$r.render($referenceLink)
+									#end
+								</td>
+							</tr>
+							<tr><th>$r.translate("cif.lastusage")</th><td>$r.formatDateAndTime($v.getStatistics().getLastUsage())</td></tr>
+							<tr><th>$r.translate("cif.usedbycnt")</th><td>$numUsers</td></tr>
+							<tr><th>$r.translate("cif.launched")</th><td>#if ($v.getStatistics().getLaunchCounter()) $v.getStatistics().getLaunchCounter() #else 0 #end</td></tr>
+							<tr><th>$r.translate("cif.downloaded")</th><td>#if ($v.getStatistics().getDowloadCounter()) $v.getStatistics().getDowloadCounter() #else 0 #end</td></tr>
+						#end
 					</tbody></table>
 				</div>
 			</div>
