OO-3358 improve chat on smart phones

--- a/src/main/java/org/olat/core/gui/control/floatingresizabledialog/_content/index.html
+++ b/src/main/java/org/olat/core/gui/control/floatingresizabledialog/_content/index.html
@@ -2,10 +2,10 @@
 	#if ($r.available("collapsibleContent"))
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-8">
+				<div class="col-sm-8 col-xs-12">
 					$r.render("panelContent")
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-4 col-xs-12">
 					$r.render("collapsibleContent")
 				</div>
 			</div>
