--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_content/corrections_navigation.html
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_content/corrections_navigation.html
@@ -1,4 +1,4 @@
-<div class="o_sel_correction_navigation clearfix">
+<div class="o_correction_navigation clearfix">
 	$r.render("previous.item")
 	<div id="o_cocurrent_item_SELBOX">
 		<select class="form-control" onchange="var current = jQuery(this).val(); jQuery(this).val('$selectedValue'); $r.openJavaScriptCommand("sel", true, false), 'item', current);">
