OO-3365 hide language chooser on login screen when only one language is available

--- a/src/main/java/org/olat/gui/control/_content/dmztopnav.html
+++ b/src/main/java/org/olat/gui/control/_content/dmztopnav.html
@@ -21,6 +21,8 @@
 				</li>
 			</ul>
 		</li>
+		#if($r.available("languageChooser"))
 		<li id="o_navbar_langchooser">$r.render("languageChooser")</li>
+		#end
 	</ul>	
 </div>	
