OO-3369: check if the links to create binder are available

--- a/src/main/java/org/olat/modules/portfolio/ui/_content/new_binder_callout.html
+++ b/src/main/java/org/olat/modules/portfolio/ui/_content/new_binder_callout.html
@@ -1,5 +1,11 @@
 <ul class="o_dropdown list-unstyled">
+	#if($r.available("empty"))
 	<li>$r.render("empty")</li>
+	#end
+	#if($r.available("template"))
 	<li>$r.render("template")</li>
+	#end
+	#if($r.available("course"))
 	<li>$r.render("course")</li>
+	#end
 </ul>
