OO-3370: show the points in the check box and available points

--- a/src/main/java/org/olat/course/nodes/cl/ui/_content/run.html
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_content/run.html
@@ -196,7 +196,12 @@
 				<h4 class="o_cl_title">
 					$r.escapeHtml($checkbox.title )
 					#if($withScore && $checkbox.pointsAvailable) 
-					<small>$r.translate("box.points.info", $checkbox.points)</small>
+						#if ($checkbox.score)
+							#set($params = [$checkbox.score,$checkbox.points])
+							<small>$r.translate("box.points.info.score", $params)</small>
+						#else 
+							<small>$r.translate("box.points.info", $checkbox.points)</small>
+						#end
 					#end
 				</h4>
 				#if($checkbox.description)
