--- a/src/main/java/org/olat/core/commons/fullWebApp/_content/fullwebapplayout.html
+++ b/src/main/java/org/olat/core/commons/fullWebApp/_content/fullwebapplayout.html
@@ -14,7 +14,7 @@
 <meta name="dcterms.identifier" content="http://www.openolat.org" />
 <meta name="dcterms.rights" content="http://www.openolat.org" />
 ## hide toolbar on ios with minimal-ui
-<meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 ## <!-- IE cache -->
 <script type="text/javascript">
