OO-3173 beautify license search result

--- a/src/main/java/org/olat/search/ui/_content/standardResult.html
+++ b/src/main/java/org/olat/search/ui/_content/standardResult.html
@@ -9,7 +9,10 @@
 		#end	
 		</h4>
 		#if ($license && $license != "")
-			<span class="o_search_result_license">$license</span>
+			<span class="o_search_result_license badge">
+				<i class="o_icon o_icon-fw o_icon_lic_small $licenseIcon"></i>
+				$license
+			</span>
 		#end
 	</div>
     #if ($result.parentContextName && $result.parentContextName != "")
