OO-3339 beautify and i18n manual correction wf, fix broken element css for cancel button and callout window

--- a/src/main/java/org/olat/core/gui/control/generic/closablewrapper/_content/callout.html
+++ b/src/main/java/org/olat/core/gui/control/generic/closablewrapper/_content/callout.html
@@ -1,4 +1,4 @@
-<div id="callout_layer_$r.getCId()" class="o_callout_content">
+<div id="callout_layer_$r.getCId()" class="o_callout_content $!cssClasses">
 	<div id="callout_layer_content_$r.getCId()">
 		$r.render("calloutWindowContent")
 	</div>
