--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_content/correction_identity_interactions.html
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_content/correction_identity_interactions.html
@@ -11,4 +11,6 @@
 	<div class="o_assessmentitem_controls">$r.render("view.solution")</div>
 #end
 
-$r.render("score.container")
+<div class="o_assessmentitem_scoring">
+	$r.render("score.container")
+</div>
