OO-3389 expose user id and properties in o_info js variable

--- a/src/main/java/org/olat/core/commons/fullWebApp/_content/fullwebapplayout.html
+++ b/src/main/java/org/olat/core/commons/fullWebApp/_content/fullwebapplayout.html
@@ -22,6 +22,7 @@
 var o_info = new Object();
 o_info.initialPageLoadFinished = false;
 o_info.o_winid = '$o_winid';
+#if($userJSON)o_info.o_user = $userJSON; #end 
 o_info.uriprefix="$r.relWinLink()";
 o_info.bc="$o_bc";
 o_info.businessPath="";
