OO-3170: Application of the license service in the question pool incl. the necessary migration of the existing licenses

--- a/src/main/java/org/olat/modules/qpool/ui/metadata/_content/bulk_change.html
+++ b/src/main/java/org/olat/modules/qpool/ui/metadata/_content/bulk_change.html
@@ -5,9 +5,11 @@ $r.contextHelpWithWrapper("Data Management#qb_change_md")<br/>
 <fieldset><legend>$r.translate("question")</legend>
 	$r.render("question")
 </fieldset>
-<fieldset><legend>$r.translate("rights")</legend>
-	$r.render("rights")
-</fieldset>
+#if ($r.available("rights"))
+	<fieldset><legend>$r.translate("rights")</legend>
+		$r.render("rights")
+	</fieldset>
+#end
 #if($r.available("technical"))
 	<fieldset><legend>$r.translate("technical")</legend>
 		$r.render("technical")
