--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_content/corrections_navigation.html
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_content/corrections_navigation.html
@@ -1,4 +1,8 @@
-<div class="o_correction_navigation clearfix">
+#if($r.isNotEmpty($title))
+	<h3><i class="o_icon $titleCssClass"> </i> $r.escapeHtml($title)</h3>
+#end
+<div class="o_block o_correction_navigation clearfix">
+	$r.render("back")
 	$r.render("previous.item")
 	<div id="o_cocurrent_item_SELBOX">
 		<select class="form-control" onchange="var current = jQuery(this).val(); jQuery(this).val('$selectedValue'); $r.openJavaScriptCommand("sel", true, false), 'item', current);">
@@ -8,6 +12,6 @@
 		</select>
 	</div>
 	$r.render("next.item")
-	$r.render("overview.tests")
 </div>
+$r.render("items")
 
